a new file is added

--- a/github.html
+++ b/github.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>dua</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit amet, explicabo aliquid nihil quos necessitatibus accusantium labore temporibus repellat officiis quasi pariatur maxime cupiditate atque tempora dolorem eaque! Culpa, consequatur?</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS1u05OPc7MSt9f5Dg2QMSbRPu_FHowIjog-jxeSwHIw&s" alt="">
 </body>
 </html>
