a new file is added

--- a/github.html
+++ b/github.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
@@ -8,6 +9,11 @@
 <body>
     <h1>dua</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit amet, explicabo aliquid nihil quos necessitatibus accusantium labore temporibus repellat officiis quasi pariatur maxime cupiditate atque tempora dolorem eaque! Culpa, consequatur?</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS1u05OPc7MSt9f5Dg2QMSbRPu_FHowIjog-jxeSwHIw&s" alt="">
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRS1u05OPc7MSt9f5Dg2QMSbRPu_FHowIjog-jxeSwHIw&s">
+   <h1> git hub</h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum enim sit animi quaerat totam blanditiis assumenda error reiciendis odio ipsum dicta itaque dolorem tenetur, ratione eius. Provident eligendi tenetur vel?</p>
+   <img src="https://www.simplilearn.com/ice9/free_resources_article_thumb/what_is_image_Processing.jpg">
+
+
 </body>
 </html>
